# desktop

./: .gitignore  CMakeLists.txt  NEXTCLOUD.cmake  config.h.in
admin/win/msi/: CMakeLists.txt  RegistryCleanup.vbs.in
enc_temp_folder/616075eff016662aa040baf28742a/: thumbnailprovider.cpp
src/common/: cfapishellextensionsipcconstants.h
src/gui/: folder.cpp  folder.h  folderman.cpp
src/gui/tray/: UserLine.qml  Window.qml  activitylistmodel.cpp  activitylistmodel.h  usermodel.cpp  usermodel.h
src/libsync/vfs/cfapi/: CMakeLists.txt  cfapiwrapper.cpp  cfapiwrapper.h  vfs_cfapi.cpp
src/libsync/vfs/cfapi/shellext/: CMakeLists.txt  cfapishellintegrationclassfactory.cpp  cfapishellintegrationclassfactory.h  contextmenus.cpp  contextmenus.h  customstateprovider.cpp  customstateprovider.h  dllmain.cpp  thumbnailprovider.cpp  thumbnailprovider.h
src/libsync/vfs/cfapi/shellextensions/: CMakeLists.txt  ShellServices.cpp  ShellServices.h  contextmenus.h  customstateprovider.h  thumbnailprovider.h
